# amos

hardware/base/: base.pde  comm.pde  crc.c  crc.h  encoder.c  encoder.h  motor.cpp  motor.h  packet.h  pid.c  pid.h  power.c  power.h  timer.c  timer.h  victor.c  victor.h
hardware/compass/: compass.pde
player/: CMakeLists.txt  Makefile  README
player/.build/: CMakeCache.txt
player/clients/: CMakeLists.txt
player/clients/camviewer/: CMakeLists.txt  camviewer.cpp
player/clients/igvcgps/: CMakeLists.txt  igvcgps.cpp  tsp.cpp  tsp.h
player/clients/mapclient/: CMakeLists.txt  mapclient.cpp
player/cmake/Modules/: UseMemcached.cmake  UseOpenCV.cmake  UsePlayerC++.cmake  UsePlayerC.cmake  UsePlayerPlugin.cmake  UseSqlite3.cmake
player/common/: CMakeLists.txt
player/common/astar/: CMakeLists.txt  astar.cc  astar.h
player/common/crc/: CMakeLists.txt  crc.c  crc.h
player/common/map/: CMakeLists.txt  define.h  map.cc  map.h  memcached.h  type.cc  type.h
player/common/serial/: CMakeLists.txt  serial.c  serial.h
player/common/thread/: CMakeLists.txt  mutex.cc  mutex.h  thread.cc  thread.h
player/common/timer/: CMakeLists.txt  timer.cc  timer.h
player/common/utm/: CMakeLists.txt  utm.c  utm.h
player/configs/amos/: amos.cfg  amosbase.cfg  amoscamera.cfg  amoscompass.cfg  amosgps.cfg  amoslocalize.cfg  amosmd.cfg  camerauvc.cfg  festival.cfg  garminnmea.cfg  sicklms200.cfg
player/configs/igvcgps/: amosapf.cfg  amoscspace.cfg  amosmapper.cfg  amosplanner.cfg  igvcgps.cfg  lasercspace.cfg
player/configs/igvcgps/2010/: course  course_setup.sh  course_utm  qualification_utm  simulation_setup.sh  simulation_utm  small_test_utm  test_setup.sh  test_utm
player/configs/igvcnav/: amosgf.cfg  amoslaserfusion.cfg  amoslinedetect.cfg  igvcnav.cfg  passthrough.cfg
player/plugins/: CMakeLists.txt
player/plugins/apf/: CMakeLists.txt  apf.cc  apf.h
player/plugins/base/: CMakeLists.txt  base.cc  base.h  comm.c  comm.h  packet.h
player/plugins/camera/: CMakeLists.txt  camera.cc  camera.h
player/plugins/compass/: CMakeLists.txt  compass.cc  compass.h
player/plugins/cspace/: CMakeLists.txt  cspace.cc  cspace.h
player/plugins/gf/: CMakeLists.txt  gf.cc  gf.h
player/plugins/gps/: CMakeLists.txt  gps.cc  gps.h  nmea.c  nmea.h
player/plugins/laserfusion/: CMakeLists.txt  laserfusion.cc  laserfusion.h
player/plugins/linedetect/: CMakeLists.txt  camerainfo.h  linedetect.cc  linedetect.h  linetrim.cc  linetrim.h  routines.cpp  routines.h
player/plugins/localize/: CMakeLists.txt  localize.cc  localize.h
player/plugins/mapper/: CMakeLists.txt  elevation.cc  mapper.cc  mapper.h  probability.cc  visual.cc
player/plugins/md/: CMakeLists.txt  WMM.cc  WMM.h  md.cc  md.h
player/plugins/planner/: CMakeLists.txt  astar.cc  astar.h  planner.cc  planner.h
player/scripts/: amos  amos-joy.sh  amos-server.sh  igvcgps-client.sh  igvcgps-server.sh  igvcnav-server.sh  motortune.sh  playerjoy.sh
player/utils/: CMakeLists.txt
player/utils/maptool/: CMakeLists.txt  db.cpp  main.cpp  maptool.h  memcached.cpp
player/utils/motortune/: CMakeLists.txt  lowpass.c  tune.c
player/utils/utmconvert/: CMakeLists.txt  utmconvert.cpp
player/visualize/: main.cpp  visualize.cfg  visualize.pro
player/visualize/model/: robot.cpp  robot.h  world.cpp  world.h
player/visualize/ui/: glinfo.cpp  glinfo.h  glwidget.cpp  glwidget.h
