include (UsePlayerPlugin)

add_subdirectory (base)
add_subdirectory (camera)
add_subdirectory (compass)
add_subdirectory (gps)
add_subdirectory (planner)
add_subdirectory (cspace)
add_subdirectory (localize)
add_subdirectory (mapper)
add_subdirectory (md)
add_subdirectory (laserfusion)
add_subdirectory (apf)
add_subdirectory (linedetect)
add_subdirectory (gf)
